# Image-Anomaly-Detection

./: .coveragerc  .dockerignore  .gitignore  Makefile  README.en.md  README.md  hamacho_setup and run to new computer.txt  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: check-licenses.yml
api/: api.py  config.yaml  requirements.txt  setup.py
api/controller/: images.py  models.py  predict.py  predict_async.py  predict_sync.py  train.py
api/grpc/: inference_pb2_grpc.py  management_pb2_grpc.py  torchserve_grpc_client.py
api/misc/: db_stress_test.py
api/model/: entity.py  schemas.py
api/tests/: base_integration.py  helper.py  test_db.py  test_images.py  test_integration.py  test_models.py  test_result.py  test_schema.py  test_train.py
api/tests/async/: test_integration.py  test_predict.py
api/tests/sync/: test_integration.py  test_predict.py
api/util/: const.py  dbtool.py  ts_handler.py  verifier.py  verifier_dummy.py
docker/: Dockerfile  Dockerfile.obfuscate  build_image.sh  download_torch_checkpoints.sh  folder_ops.sh  install.sh
docs/: general.md  index.jp.md  index.md
docs/api/: manage-api.jp.md  manage-api.md  openapi.yml
docs/config/: manage-config.jp.md  manage-config.md
docs/dataset/: manage-dataset.jp.md  manage-dataset.md
docs/docker/: manage-docker-compose-webui.jp.md  manage-docker-compose-webui.md  manage-docker.jp.md  manage-docker.md
docs/features/: manage-dataset.md  manage-models.md
docs/inference/: manage-inference.jp.md  manage-inference.md
docs/license/: product-license.jp.md  product-license.md
docs/model/: manage-models.jp.md  manage-models.md
docs/quickstart/: howtoapi.jp.md  howtoapi.md  howtocli.jp.md  howtocli.md  howtowebgui.jp.md  howtowebgui.md  quickstart.jp.md  quickstart.md
docs/training/: manage-training-no_bad_mode.jp.md  manage-training-no_bad_mode.md  manage-training.jp.md  manage-training.md
hamacho/: __init__.py  demo_inference.py  main.py
obfuscated/: verifier_dummy.py
scripts/license/: obfuscate.sh
scripts/tests/: generate-test-licenses.sh
tests/helpers/: config.py  dataset.py  detection.py  dirs.py  dummy_lightning_model.py  inference.py  model.py  shapes.py  train.py
(+138 files in other folders)
