[tool.poetry]
name = "hamacho"
version = "1.6.0"
description = "Anamoly Detection Engine"
authors = ["CHOWA GIKEN & AI SAMURAI JAPAN"]
license = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.8"
albumentations = ">=1.1.0"
jsonargparse = {version = ">=4.3", extras = ["signatures"]}
kornia = "0.6.8"
matplotlib = ">=3.4.3"
omegaconf = ">=2.1.1"
opencv-python = ">=4.5.3.56"
pandas = ">=1.1.0"
timm = "0.5.4"
torch = [{url = "https://download.pytorch.org/whl/cu113/torch-1.12.1%2Bcu113-cp38-cp38-linux_x86_64.whl",             markers = "sys_platform == 'linux'"}, {url = "https://download.pytorch.org/whl/cu113/torch-1.12.1%2Bcu113-cp38-cp38-win_amd64.whl",          markers = "sys_platform == 'win32'"}]
torchmetrics = "0.10.2"
torchvision = [{url = "https://download.pytorch.org/whl/cu113/torchvision-0.13.1%2Bcu113-cp38-cp38-linux_x86_64.whl", markers = "sys_platform == 'linux'"}, {url = "https://download.pytorch.org/whl/cu113/torchvision-0.13.1%2Bcu113-cp38-cp38-win_amd64.whl",    markers = "sys_platform == 'win32'"}]
pytorch-lightning = ">=1.6.0,<=1.7.0"
click = "8.1.3"


[tool.poetry.group.api.dependencies]
SQLAlchemy = "1.4.*"
gunicorn = "20.1.0"
jsonschema = "4.17.*"
Flask = "2.2.2"
Flask-Cors = "3.0.10"
Flask-RESTful = "0.3.9"
requests = "2.28.*"
torchserve = "0.7.0"
torch-model-archiver = "0.7.0"
nvgpu = "0.9.0"
pynvml = "11.4.1"


[tool.poetry.group.dev.dependencies]
black = "22.6.0"
isort = "5.10.1"
pylint = "2.14.5"
flake8 = "4.0.1"
pre-commit = ">=2.15.0"
pyarmor = "7.7.4"
tox = ">=3.24.3"
xlsxwriter = "3.0.3"


[tool.poetry.group.docs.dependencies]
furo = "2021.7.31b41"
myst-parser = "^0.18.0"
Sphinx = ">=4.1.2"
sphinx-autoapi = "^1.9.0"
sphinxemoji = "0.1.8"
mkdocs = "1.4.3"
mkdocs-material = "9.1.15"
mkdocs-static-i18n = "0.56"
pymdown-extensions = "10.0.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
torchserve = "0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.plugins] # Optional super table

[tool.poetry.plugins."console_scripts"]
"hamacho" = "hamacho.main:cli"
